# gcorr

./: .gitignore  .gitmodules  Doxyfile  README.md  fxkernel.cpp
codedoc/html/: annotated.html  classFxKernel-members.html  classFxKernel.html  classes.html  dir_3f730e4b993f3578e2207d0786f1432c.html  dir_859df2307517142583867e9417ab7db9.html  dir_b7f463d1892739729b2a2e7721d1780d.html  dir_c09bc72ae345a349f1352a57cd2d36af.html  files.html  fxkernel_8h_source.html  graph_legend.html  gxkernel_8h_source.html  index.html  vectordefs_8h_source.html
codedoc/html/search/: classes_0.js
codedoc/latex/: annotated.tex  classFxKernel.tex  dir_3f730e4b993f3578e2207d0786f1432c.tex  dir_859df2307517142583867e9417ab7db9.tex  dir_b7f463d1892739729b2a2e7721d1780d.tex  dir_c09bc72ae345a349f1352a57cd2d36af.tex  refman.tex
doc/: FxCorr Design.docx  gCorr Design.docx
examples/adam/: gv023.conf  vis.out
examples/chris/bench/: Makefile  README  filterspeed.cu  gpuauto.cu  gpubench.cu  gpucorr.cu  gpufft.cu  gpuspeed.cu  statistics.cu
examples/mark/: dump_vdif.py  plot.py
examples/mark/gv023/: gv023.conf  gv023.vix
fxkernel/: .gitignore  Doxyfile  INSTALL  Makefile.am  configure.ac  fxkernel.h  genipppc
fxkernel/bench/: antenna-16384.sh  antenna.sh  channels.sh  runall.sh  test10-16384.conf  test10.conf  test12-16384.conf  test12.conf  test16-16384.conf  test16.conf  test4-16384.conf  test4.conf  test6-16384.conf  test6.conf  test8-1024.conf  test8-16384.conf  test8-256.conf  test8-4096.conf  test8-64.conf  test8.conf  threads.sh
fxkernel/scripts/: verifyfxkernel.py
fxkernel/src/: Makefile.am  bench_fxkernel.cpp  common.cpp  common.h  fxkernel.cpp  fxkernel.h  test.conf  testfxkernel.cpp  vectordefs.h
gcorr/: Makefile.am  README  configure.ac
gcorr/bench/: antenna-16384-8bit-half.sh  antenna-16384-8bit.sh  antenna-16384-half.sh  antenna-16384.sh  antenna-8bit-half.sh  antenna-8bit.sh  antenna-half.sh  antenna.sh  channels-8.sh  channels-8half.sh  channels-half.sh  channels.sh  runall.sh  test10-16384.conf  test10-8-16384.conf  test10-8.conf  test10.conf  test12-16384.conf  test12-8-16384.conf  test12-8.conf  test12.conf  test16-16384.conf  test16-8-16384.conf  test16-8.conf  test16.conf  test4-16384.conf  test4-8-16384.conf  test4-8.conf  test4.conf  test6-16384.conf  test6-8-16384.conf  test6-8.conf  test6.conf  test8-1024.conf  test8-16384.conf  test8-256.conf  test8-4096.conf  test8-64.conf  test8-8-1024.conf  test8-8-16384.conf  (+5 more)
gcorr/src/: Makefile  Makefile.am  benchmark_gxkernel.cu  benchmark_suite.sh  gxkernel.cu  gxkernel.h  testgpukernel.cu  validate_xcorr.cu
gcorr/test/: Makefile  gpu_array.h  mkdata.cu  mkdata.h  ubench.cc  unit.cc  wrappers.cu  wrappers.h
generators/: Makefile  README.md  autoSpec.c  bitconversion.c  bitconversion.h  generateSpectrum.c
ingest/src/: constants.h  dada_header_template_atca.txt  ingest.c  ingest.h  ingest_file  ingest_file.c  log.c  log.h  makefile
network_bench/: README.md  clocks  hires_timer  hires_timer.c  makefile  sendto  settimer_test  settimer_test.c
network_bench/src/: clocks.c  makefile  nanosleep_test.c  sendto.c  setitimer_test.c  timer_settime.c  timer_settime_1.c
nic_trial/: .gitignore  README.md  client.py  config.yaml  config_second.yaml  config_second_v0.yaml  config_second_v1.yaml  config_second_v2.yaml  config_second_v3.yaml  counter.c  execute.py  makefile  pipeline.py  pipeline_second.py  psrdada_bigcat.txt  server.py  udp2db.c  udp2db_second.c
ubench/: Makefile
ubench/src/: kernels.cu  kernels.h  ubench.cc
util/: difx2conf.py  lagsnr.py  multiplot.py
