# This Makefile.am specifies the programs and libraries to build. Several
# different targets can be specified in this single file.

# bin means install in bindir, PROGRAMS means building a program
# You can have multiple programs. See slide 307 for different types of target.
# Header files are not compiled, but should be listed as dependencies so that
# they get distributed.
bin_PROGRAMS = testgpukernel
testfxkernel_SOURCES = testgpukernel.cu gxkernel.cu
